tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/ErrorReportingTests#createFile(String).mjava
	protected static IFile createFile(String data) throws Exception {
		IFile testFile = project.getFile("test" + (++count) + ".php");
		testFile.create(new ByteArrayInputStream(data.getBytes()), true, null);
		project.refreshLocal(IResource.DEPTH_INFINITE, null);
		project.build(IncrementalProjectBuilder.INCREMENTAL_BUILD, null);
		return testFile;
	}

